--- a/templates/teacher/check.html
+++ b/templates/teacher/check.html
@@ -46,7 +46,7 @@
                 {% endif %}                
 
     {% endfor %}
-    {% elif lesson == "2" or lesson == "3" or lesson == "4" or lesson == "5" %}
+    {% elif lesson == "2" or lesson == "3" or lesson == "4" or lesson == "5" or lesson == "8" %}
     {% for index, list in lesson_list %}
         <tr align=left>
         <td align=right>{{list.0.0}}</td>
