--- a/templates/account/statics_lesson.html
+++ b/templates/account/statics_lesson.html
@@ -5,6 +5,8 @@
 <tr><td>名次</td><td>瀏覽次數</td><td>課程編號</td></tr>
 {% for counter in counters %}
 <Tr><td>{{forloop.counter}}</td><td><a href="/student/counter/{{counter.name}}" target="_blank">{{counter.hit}}</a></td><td><a href="/student/lesson{% if counter.name|length == 1 %}s{% endif%}/{{counter.name}}" target="_blank">{{counter.name}}</td></Tr>
-{% endfor %}
+{% endfor %}  
 </table>
+{% load pagination %}
+{% get_pagination %}  
 {% endblock %}
