--- a/templates/account/statics_lesson.html
+++ b/templates/account/statics_lesson.html
@@ -4,7 +4,7 @@
 <table class="table">
 <tr><td>名次</td><td>瀏覽次數</td><td>課程編號</td></tr>
 {% for counter in counters %}
-<Tr><td>{{forloop.counter}}</td><td><a href="/student/counter/{{counter.name}}" target="_blank">{{counter.hit}}</a></td><td><a href="/student/lesson{% if counter.name|length == 1 %}s{% endif%}/{{counter.name}}" target="_blank">{{counter.name}}</td></Tr>
+<Tr><td>{{page_obj.number|multiply:50|add:forloop.counter|add:-50}}</td><td><a href="/student/counter/{{counter.name}}" target="_blank">{{counter.hit}}</a></td><td><a href="/student/lesson{% if counter.name|length == 1 %}s{% endif%}/{{counter.name}}" target="_blank">{{counter.name}}</td></Tr>
 {% endfor %}  
 </table>
 {% load pagination %}
