--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -756,21 +756,21 @@ function MM_swapImage() { //v3.0
 <tr>
 <td>
     <table class="table">
-      <tr><Td>可汗學院的教育奇蹟</Td></tr>
+      <tr><Td><A href="http://www.books.com.tw/products/0010589636" target="_blank">可汗學院的教育奇蹟</a></Td></tr>
       <tr><td>作者： 薩爾曼．可汗</td></tr>
       <tr><td>出版日期：2013/06/24</td></tr>
     </table>
 </td>
 <td>
     <table class="table">
-      <tr><Td>創新是一種態度</Td></tr>
+      <tr><Td><a href="http://www.books.com.tw/products/0010676428" target="_blank">創新是一種態度</a></Td></tr>
       <tr><td>作者： 翟本喬</td></tr>
       <tr><td>出版日期：2015/06/04</td></tr>
     </table>
 </td>
 <td>
     <table class="table">
-      <tr><Td>大腦喜歡這樣學</Td></tr>
+      <tr><Td><a href="http://www.books.com.tw/products/0010764994" target="_blank">大腦喜歡這樣學</a></Td></tr>
       <tr><td>作者： 芭芭拉‧歐克莉</td></tr>
       <tr><td>出版日期：2017/09/27</td></tr>
     </table>  
@@ -789,14 +789,14 @@ function MM_swapImage() { //v3.0
 <tr>
 <td>
     <table class="table">
-      <tr><Td>刻意練習</Td></tr>
+      <tr><Td><A href="http://www.books.com.tw/products/0010752714?loc=P_asb_002" target="_blank">刻意練習</A></Td></tr>
       <tr><td>作者： 安德斯‧艾瑞克森, 羅伯特‧普爾</td></tr>
       <tr><td>出版日期：2017/06/01</td></tr>
     </table>
 </td>
 <td>
     <table class="table">
-      <tr><Td>學習就像終身幼兒園</Td></tr>
+      <tr><Td><a href="http://www.books.com.tw/products/0010783038" target="_blank">學習就像終身幼兒園</a></Td></tr>
       <tr><td>作者： 米契爾．瑞斯尼克</td></tr>
       <tr><td>出版日期：2018/04/03</td></tr>
     </table>
