--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -12,6 +12,8 @@
     {% include "student/submitB.html" %}
 {% elif lesson == "9" %}
     {% include "student/submitF.html" %}
+{% elif lesson == "10" %}
+    {% include "student/submitG.html" %}
 {% endif %}
 {% endblock %}
 
