--- a/templates/student/show.html
+++ b/templates/student/show.html
@@ -139,10 +139,29 @@
   {% else %}
     尚未繳交
   {% endif %}
-
 {% elif lesson == "4" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    {% if work.comment %}<div>評語：{{ work.comment }}</div>{% endif %}	    
+    <div>{{ work.memo }}</div>
+    <div>Youtube：</div>
+    <div><iframe width="800" height="480" src="https://www.youtube.com/embed/{{ work.youtube|video }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+  {% else %}
+    尚未繳交
+  {% endif %}
+{% elif lesson == "10" %}
+  {% if work %}
+    {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    {% if work.comment %}<div>評語：{{ work.comment }}</div>{% endif %}	       
+    <div>心得感想：{% if work.publish %}(已發表){% else %}<a href="/student/work/publish/{{typing}}/{{lesson}}/{{index}}/2" class="btn" role="btn">發表心得</a>{% endif %}</div>
+    <div>{{ work.memo|linebreaks }}</div>
+ {% else %}
+    尚未繳交
+  {% endif %}  
+{% elif lesson == "4" %}
+  {% if work %}
+    {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    {% if work.comment %}<div>評語：{{ work.comment }}</div>{% endif %}	    
     <div>心得感想：</div>
     <div>{{ work.memo }}</div>
     <div>Youtube：</div>
@@ -153,6 +172,7 @@
 {% elif lesson == "6" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    {% if work.comment %}<div>評語：{{ work.comment }}</div>{% endif %}	       
     <div>心得感想：</div>
     <div>{{ work.memo }}</div>
     <div>
@@ -167,6 +187,7 @@
 {% elif lesson == "2" or lesson == "3" or lesson == "5" or lesson == "7" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    {% if work.comment %}<div>評語：{{ work.comment }}</div>{% endif %}	       
     <div>心得感想：</div>
     <div>{{ work.memo }}</div>
     <div>創作過程：</div>
@@ -184,6 +205,7 @@
 {% elif lesson == "8" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
+    {% if work.comment %}<div>評語：{{ work.comment }}</div>{% endif %}	       
     <div>心得感想：</div>
     <div>{{ work.memo }}</div>
     <div>程式碼：</div>
