--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -171,7 +171,7 @@
     <div class="whitebox">
       <div class="content">
         <h1>在 Joy of Code 上學習</h1>
-        {{student}} 個學生在這兒撰寫了 {{works.0}} 個程式，看了 X本書。
+        {{student}} 個學生在這兒撰寫了 {{works.0}} 個程式，看了 {{works.7.2}} 本書。
         <div id="summary">
           <img src="/static/images/work.png">
           <div style="left:27px; line-height:18px;">
