--- a/templates/student/works_list.html
+++ b/templates/student/works_list.html
@@ -42,12 +42,14 @@
     <div id="calendar_basic" style="width: 1000px;"></div>    
     <table class="table" style="width:100%">
         <tr>
-            <td>班級名稱</td>
+            <td>課程</td>              
+            <td>班級名稱</td>          
             <td>教師</td>
             <td>學生人數</td>                
         </tr>
     {% for classroom, teacher_name, students in classroom_teachers %}
         <tr>
+        <td>{{classroom.lesson_choice}}</td>
         <td>{{classroom.name}}</td>
         <td>{{teacher_name}}</td>
         <td>{{students}}</td>
