--- a/templates/student/works_list.html
+++ b/templates/student/works_list.html
@@ -39,6 +39,7 @@
     </script>
 {% endblock %}
 {% block content %}
+{{work_end}}
     <div id="calendar_basic" style="width: 1000px;"></div>    
     <table class="table" style="width:100%">
         <tr>
