--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -16,7 +16,7 @@
     <p style="padding:0px; margin:2px;">
 基本資料：
 			<a href="/student/classroom/seat/{{enroll.id}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">座號</a>
-			<a href="/student/group/{{enroll.classroom_id}}" role="button" class="btn btn-success">組別</a>
+			<a href="/student/group/panel/{{enroll.classroom_id}}" role="button" class="btn btn-success">組別</a>
 			<a href="/student/classmate/{{enroll.classroom_id}}" role="button" class="btn btn-success">同學</a>
 			<a href="/student/work1/{{enroll.classroom.lesson}}/{{enroll.classroom_id}}" role="button" class="btn btn-success">小老師</a>
       <a href="/student/memo_count/{{enroll.classroom_id}}" role="button" class="btn btn-success">詞頻</a>      
