--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -24,7 +24,7 @@
                 <a href="/teacher/classroom/edit/{{classroom.id}}" role="button" class="btn btn-success">修改</a>
                 <a href="/student/classmate/{{classroom.id}}" role="button" class="btn btn-success">學生</a>
                 <a href="/teacher/classroom/assistant/{{classroom.id}}" role="button" class="btn btn-success">助教</a>                
-                <a href="/student/group/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
+                <a href="/student/group/panel/{{classroom.id}}" role="button" class="btn btn-success">組別</a>
 							  <a href="/teacher/work/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">指定作業</a>
 							  <a href="/teacher/work2/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">自訂作業</a>                
 							  <a href="/teacher/work3/{{classroom.lesson}}/{{classroom.id}}" role="button" class="btn btn-success">檢核作業</a>                
