--- a/templates/teacher/student_join.html
+++ b/templates/teacher/student_join.html
@@ -2,9 +2,11 @@
 {% load tag %}
 {% block title %} Teachers {% endblock %}
 {% block content %}
-<form action="/teacher/student/enroll/{{classroom_id}}/"  method="post">      
- 搜尋帳號：<input type="text" name = "account" style="display:inline-block;width:200px"><input type="submit" value="送出" style="display:inline-block;width:100px"/>
-        <tr>
+    搜尋帳號：
+    <form action="."  method="get">
+      <input type="text" name = "account"><input type="submit" value="送出"/>
+    </form>
+      <form action="/teacher/student/enroll/{{classroom_id}}/"  method="post">      
         <table class="table">
 		    <td><input type="checkbox" name="select-all" id="select-all" /></td>
             <td>帳號</td>
