--- a/templates/account/people.html
+++ b/templates/account/people.html
@@ -7,7 +7,7 @@
   <div class="card-body">
 <table>
 <tr><td><img src="/static/images/about/jean2014.png"></td></tr>
-<tr><td>高慧君(南港高中)</td></tr>
+<tr><td>高慧君老師(南港高中)</td></tr>
 </table>
   </div>
 </div>
@@ -18,8 +18,8 @@
   <div class="card-body">
 <table>
 <tr>
-<td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/mfshih.png"><BR>石明豐(臺灣大學)</td>
+<td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
+<td><img src="/static/images/about/mfshih.png"><BR>石明豐教授(臺灣大學)</td>
 </tr>
 </table>
   </div>
@@ -31,8 +31,8 @@
   <div class="card-body">
 <table>
 <tr>
-<td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/dinowei.png"><BR>魏仲良(大直高中)</td>
+<td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
+<td><img src="/static/images/about/dinowei.png"><BR>魏仲良老師(大直高中)</td>
 </tr>
 </table>
   </div>
@@ -44,9 +44,9 @@
   <div class="card-body">
 <table>
 <tr>
-<td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/wu.png"><BR>吳秉鋒(華江高中)</td>
-<td><img src="/static/images/about/yuan.png"><BR>賴錦緣(臺中科技大學)</td>
+<td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
+<td><img src="/static/images/about/wu.png"><BR>吳秉鋒老師(華江高中)</td>
+<td><img src="/static/images/about/yuan.png"><BR>賴錦緣教授(臺中科技大學)</td>
 </tr>
 </table>
   </div>
@@ -58,9 +58,9 @@
   <div class="card-body">
 <table>
 <tr>
-<td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/pecu.png"><BR>蔡芸琤(臺灣大學)</td>
-<td><img src="/static/images/about/mfshih.png"><BR>石明豐(臺灣大學)</td>
+<td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
+<td><img src="/static/images/about/pecu.png"><BR>蔡芸琤教授(臺灣大學)</td>
+<td><img src="/static/images/about/mfshih.png"><BR>石明豐教授(臺灣大學)</td>
 </tr>
 </table>
   </div>
@@ -72,10 +72,10 @@
   <div class="card-body">
 <table>
 <tr>
-<td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/dinowei.png"><BR>魏仲良(大直高中)</td>
-<td><img src="/static/images/about/kuo.png"><BR>郭再興(豐原高中)</td>
-<td><img src="/static/images/about/johan.png"><BR>紀宗衡(真理大學)</td>
+<td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
+<td><img src="/static/images/about/dinowei.png"><BR>魏仲良老師(大直高中)</td>
+<td><img src="/static/images/about/kuo.png"><BR>郭再興老師(豐原高中)</td>
+<td><img src="/static/images/about/johan.png"><BR>紀宗衡教授(真理大學)</td>
 </tr>
 </table>
   </div>
@@ -87,9 +87,9 @@
   <div class="card-body">
 <table>
 <tr>
-<td><img src="/static/images/about/jean2014.png"><BR>高慧君(南港高中)</td>
-<td><img src="/static/images/about/lovewien.png"><BR>戴伶娟(南港高中)</td>
-<td><img src="/static/images/about/cabit.png"><BR>王立忠(南港高中)</td>
+<td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
+<td><img src="/static/images/about/lovewien.png"><BR>戴伶娟老師(南港高中)</td>
+<td><img src="/static/images/about/cabit.png"><BR>王立忠老師(南港高中)</td>
 </tr>
 </table>
   </div>
