--- a/templates/account/people.html
+++ b/templates/account/people.html
@@ -46,7 +46,7 @@
 <tr>
 <td><img src="/static/images/about/jean2014.png"><BR>高慧君老師(南港高中)</td>
 <td><img src="/static/images/about/wu.png"><BR>吳秉鋒老師(華江高中)</td>
-<td><img src="/static/images/about/yuan.png"><BR>賴錦緣教授(臺中科技大學)</td>
+<td><img src="/static/images/about/yuan.png"><BR>賴錦緣教授(臺中科大)</td>
 </tr>
 </table>
   </div>
