--- a/templates/student/submitA.html
+++ b/templates/student/submitA.html
@@ -46,6 +46,7 @@ $(function () {
             </form>
         {% with workfiles=work_dict|hash_files:index %}
 
+
         <font color=red>作品：</font>
         <style>
             #test {width: 640px; height: 480px}
@@ -165,7 +166,7 @@ $(function () {
             }
         
             window.onload = function (e) {
-              loadProject('/static/work/scratch/{{request.user.id}}/{{workfiles.0.filename}}');
+              loadProject('/static/work/scratch/{{student.id}}/{{workfiles.0.filename}}');
             }
         
           </script>      
