--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,274 +1,9 @@
-{% extends "base.html" %}
-{% block header %}
-<style>
-/* Slideshow container */
-.slideshow-container {
-  position: relative;
-  background: #f1f1f1f1;
-}
-
-/* Slides */
-.mySlides {
-  display: none;
-  padding: 80px;
-  text-align: justify;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: #888;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-  color: white;
-}
-
-/* The dot/bullet/indicator container */
-.dot-container {
-    text-align: center;
-    padding: 20px;
-    background: #ddd;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-/* Add a background color to the active dot/circle */
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Add a blue color to the author */
-.author {color: cornflowerblue;}
-  
-  #summary {position: relative; padding: 0}
-  #summary>div {position: absolute; bottom: 21px; width: 219px; line-height: 37px; text-align: center}
-  #summary2 {position: relative; padding: 0}
-  #summary2>div {position: absolute; bottom: 55px; width: 219px; line-height: 37px; text-align: center}  
-  #summary3 {position: relative; padding: 0}
-  #summary3>div {position: absolute; bottom: 55px; width: 219px; line-height: 37px; text-align: center}    
-</style>
-{% endblock %}
-{% block banner %}
-<BR><BR>
-  <div class="wrapper">
-  <div id="header">
-    <img src="/static/images/header.png">
-  </div>
-</div>
-<!-- ####################################################################################################### -->
-<div class="wrapper">
-  <div id="topbar">
-    <div class="fl_right">
-      <img src="/static/images/banner.png">      
-    </div>
-    <br class="clear" />
-  </div>
-</div>
-<!-- ####################################################################################################### -->
-
-<div class="wrapper">
-  <div id="footer">
-    <div class="latestgallery">
-      <h2>程式語言</h2>
-      <img src="/static/images/language.png">
-      <BR><BR>
-      <h2>相關網站</h2>
-      <ul>
-        <li><a href="http://scratch.mit.edu" target="_blank">Scratch<BR>官網</a></li>
-        <li><a href="https://www.python.org/" target="_blank">Python<BR>官網</a></li>
-        <li><a href="http://vpython.org/" target="_blank">VPython<BR>官網</a></li>
-        <li class="last"><a href="https://projecteuler.net/" target="_blank">尤拉計畫<BR>官網</a></li>          
-      </ul>      
-    </div>
-    <div class="footbox">
-      <h2>關於本站</h2>
-      <ul>
-        <li><a href="/account/author">作者</a></li>          
-        <li><a href="/photologue">活動紀實</a></li>        
-        <li><a href="/account/about">網站開發人員</a></li>   
-        <li><a href="/account/manual">網站使用手冊</a></li>           
-        <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
-        <li><a href="/account/people">教材研發人員</a></li>
-        <li><a href="/account/statics/login/">使用者登入統計</a></li>
-        <li><a href="/account/contact">連絡我們</a></li>        
-      </ul>
-    </div>
-    <div class="footbox last">
-      <h2>網站統計</h2>
-      <ul>
-        <li><a href="#">使用者登入次數：{{admin_profile.visitor_count}}次</a></li>
-        <li><a href="#">訪客人次：{{admin_profile.home_count}}次</a></li>
-        <li><a href="#">教師人數：{{teacher}}人</a></li>   
-        <li><a href="#">學生人數：{{student}}人</a></li>         
-        <li><a href="#">開課班次：{{classroom_count}}班</a></li>
-        <li><a href="#">註冊使用者：{{user_count}}人</a></li>
-        <li><a href="#">資料庫記錄：共{{row_count}}筆</a></li>
-        <li class="last"><a href="#">開站時間：{{admin_profile.open_time|date:'Y-m-d H:i'}}</a></li>
-      </ul>
-    </div>
-    <br class="clear" />
-  </div>
-</div>        
-{% endblock %}
-  
-{% block content %}
-<div class="slideshow-container">
-
-<div class="mySlides">
-  <q>每個人都應該學習程式設計嗎？是的。就像每個人都應該學習數學或音樂、美術一樣；學習數學可以培養我們抽象思考、邏輯思維能力，學習音樂、美術可以培養我們藝術美感、創意表現能力，學習程式設計則可以培養我們運算思維（computational thinking）、運用電腦解決問題的能力。蘋果公司創辦人Steve Jobs認為每個人都應該學習程式設計，因為程式設計訓練我們如何思考，他認為程式設計應該屬於人文素養教育的一部分。</q>
-  <p class="author" style="text-align:center;">- 國立臺灣師範大學 吳正己校長</p>
-</div>
-  
-<div class="mySlides">
-  <q>我們知道將來的產業絕大多數都會和資訊技術（IOT、AI、大數據、工業4.0、…）相關，而程式語言是資訊工具的基礎，如果能讓我們的學生更早具備程式設計的基礎，將會對台灣將來的產業，有重大的影響。此外，各個專業學門，不管是科學（如數學、物理、化學、生物…等）或是工程（如電機、資訊、機械…）在研究和技術發展上，都有很大的比例已經是利用程式來做模擬、計算、或設計，因此讓學生們提早理解程式在這些領域的用途，也會讓學生在大學或研究所時，減少進入這些學門的障礙。</q>
-  <p class="author" style="text-align:center;">- 國立臺灣大學 物理學系 石明豐教授</p>
-</div>
-  
-<a class="prev" onclick="plusSlides(-1)">❮</a>
-<a class="next" onclick="plusSlides(1)">❯</a>
-
-</div>
-
-<div class="dot-container">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span>   
-</div>  
-{% endblock %}
-{% block footer %}
-<!--//---------------------------------------//-->
-<div class="wrapper">
-  <div class="container">
-    <div class="whitebox">
-      <div class="content">
-        <h1>在 Joy of Code 上學習</h1>
-        {{student}} 個學生在這兒撰寫了 {{works.0}} 個程式，看了 {{works.7.2}} 本書。
-        <div id="summary">
-          <img src="/static/images/work.png">
-          <div style="left:27px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/1" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.1.0}} 班次 {{works.1.1}}位學生<BR>共 {{works.1.2}} 個作業</a>
-            {% else %}
-            {{works.1.0}} 班次 {{works.1.1}} 位學生<BR>共 {{works.1.2}} 個作品
-            {% endif %}            
-          </div>
-          <div style="left:333px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/2" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.2.0}} 班次 {{works.2.1}}位學生<BR>共 {{works.2.2}} 個作業</a>
-            {% else %}
-            {{works.2.0}} 班次 {{works.2.1}} 位學生<BR>共 {{works.2.2}} 個作品
-            {% endif %}  
-          </div>  
-          <div style="left:646px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/3" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.3.0}} 班次 {{works.3.1}}位學生<BR>共 {{works.3.2}} 個作業</a>
-            {% else %}
-            {{works.3.0}} 班次 {{works.3.1}} 位學生<BR>共 {{works.3.2}} 個作品
-            {% endif %}              
-          </div>
-        </div>
-         <div id="summary2">         
-          <img src="/static/images/work2.png">
-          <div style="left:27px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/8" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.4.0}} 班次 {{works.4.1}}位學生<BR>共 {{works.4.2}} 個作業</a>
-            {% else %}
-            {{works.4.0}} 班次 {{works.4.1}} 位學生<BR>共 {{works.4.2}} 個作品
-            {% endif %}  
-          </div>
-          <div style="left:333px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/10" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.7.0}} 班次 {{works.7.1}}位學生<BR>共 {{works.7.2}} 個作業</a>
-            {% else %}
-            {{works.7.0}} 班次 {{works.7.1}} 位學生<BR>共 {{works.7.2}} 個作品
-            {% endif %}            </div>
-          <div style="left:646px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/7" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.5.0}} 班次 {{works.5.1}} 位學生<BR>共 {{works.5.2}} 個作業</a>
-            {% else %}
-            {{works.5.0}} 班次 {{works.5.1}} 位學生<BR>共 {{works.5.2}} 個作品
-            {% endif %}    
-          </div>
-        </div>
-        <div id="summary3">
-          <img src="/static/images/work3.png">
-          <div style="left:27px; line-height:18px;">
-            {% if user.is_superuser %}            
-            <a href="/student/work/list/6" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.6.0}} 班次 {{works.6.1}}位學生<BR>共 {{works.6.2}} 個作業</a>
-            {% else %}
-            {{works.6.0}} 班次 {{works.6.1}} 位學生<BR>共 {{works.6.2}} 個作品
-            {% endif %}             </div>
-          <div style="left:333px; line-height:18px;">
-            <a href="/student/work/list/8" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">x 班次 x位學生<BR>共計 x 個作業</a>
-          </div>
-          <div style="left:646px; line-height:18px;">
-            <a href="/student/work/list/9" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">x 班次 x位學生<BR>共計 x 個作業</a>
-          </div>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-</div>
-{% endblock %}
-  
-{% block footer_script %}
-<script>
-var slideIndex = Math.floor(Math.random() * Math.floor(2));
-//var slideIndex = 1
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-}
-</script>    
-{% endblock %}
+<html>
+    <head>
+        <meta http-equiv="refresh" content="10;url=http://coding.nutc.edu.tw/" />
+    </head>
+    <body>
+        <h1>本網站已移到新主機，請改用新網址連線</h1>
+        <h1><a href="//http://coding.nutc.edu.tw">http://coding.nutc.edu.tw</a></h1>
+    </body>
+</html>
