--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>本網站已移到新主機，請改用新網址連線</h1>
-        <h1><a href="//http://coding.nutc.edu.tw">http://coding.nutc.edu.tw</a></h1>
+        <h1><a href="http://coding.nutc.edu.tw">http://coding.nutc.edu.tw</a></h1>
     </body>
 </html>
