--- a/templates/teacher/assistant_group.html
+++ b/templates/teacher/assistant_group.html
@@ -2,19 +2,23 @@
 {% load tag %}
 {% block title %} Students {% endblock %}
 {% block content %}
+{% for assignment, student_groups in lessons %}
+<a href="#{{assignment.0}}" role="btn" class="btn btn-success">{{assignment.2}}</a>
+{% endfor %}
 
 <BR>
-	        {% for assignment in lessons %}
-	{{assignment.0.0}}){{assignment.0.1}}--{{assignment.0.2}}
+			{% for assignment, student_groups in lessons %}
+			<a name="{{assignment.0}}"></a>			
+	{{assignment.0}}){{assignment.1}}--{{assignment.2}}
 <table class="table">
 <tr>
 <Td width=150>組別</Td>
 <td width=150>小老師</td>
 <td>組員</td>  
 </tr>	
-  {% for groups, works, assistants, group_name in assignment.1 %}
+  {% for group, works, assistants in student_groups %}
                 <tr>
-									<td nowrap>{{group_name}}</td>
+									<td nowrap>第{{group|add:1}}組</td>
                 <td>
                   {% for assistant in assistants %}
 				({{assistant.seat}}){{assistant.student_id|realname}}<BR>                            
