--- a/templates/student/work_group.html
+++ b/templates/student/work_group.html
@@ -2,6 +2,7 @@
 {% block title %} Students {% endblock %}
 {% block content %}
 {% for lesson in lessons %}
+<div id="{{forloop.counter}}"></div>
 {{lesson.0.1}} : {{lesson.0.2}}<Br>
 <table class="table">
 <tr>
@@ -17,9 +18,20 @@
 									<td>               
 				{% for enroll in lesson.1.0.1 %}
           {% if user.id in lesson.1.0.3 %}<a target=_blank href="/teacher/scoring/{{classroom_id}}/{{enroll.0.student_id}}/{{forloop.parentloop.counter}}">{% endif %}({{enroll.0.seat}}){{enroll.0.student.first_name}}{% if user.id in lesson.1.0.3 %}</a>{% endif %}
-					{% if enroll.1 != -1 %} -{{enroll.1}}-{{enroll.2}}{% else %}-{% if enroll.3 == "" %}<font color=green>尚未繳交</font>{% else %}<font color=red>尚未評分</font>{% endif %}{% endif %}
+					{% if enroll.1 != -2 %} -{{enroll.1}}-{{enroll.2}}{% else %}-{% if enroll.3 == "" %}<font color=green>尚未繳交</font>{% else %}<font color=red>尚未評分</font>{% endif %}{% endif %}
 				{% endfor %}
 				</td>
 </table>
 {% endfor %}
+{% endblock %}
+
+{% block domready %}
+  if (location.hash){
+  var id = $(location.hash);
+  }
+  $(window).load(function() {
+	if (location.hash){
+	  $('html,body').animate({scrollTop: id.offset().top -80}, 'linear')
+	};
+   });
 {% endblock %}
