--- a/templates/account/admin.html
+++ b/templates/account/admin.html
@@ -5,4 +5,5 @@
 <a href="/account/visitor" class="btn btn-primary">訪客</a>
 <a href="/account/line/teacher" class="btn btn-primary">教師公告</a>
 <a href="/account/import/upload" class="btn btn-primary">匯入帳號</a>
+<a href="/student/plant/submit" class="btn btn-primary">智慧植栽</a>
 {% endblock %}
