--- a/templates/student/plant_show.html
+++ b/templates/student/plant_show.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <h3>
-這個網頁將會記錄南港高中發展智慧植栽程式設計的過程，緣起於目前我們的學生學習程式設計課程還處於基本功培養的階段，看不到實際的應用，如何能夠讓學生了解如何透過程式來來真實地解決日常生活的問題，以達成12年國教所強調的素養導向教學。我們在執行臺北市小田園計畫的過程中，我們發現種花草與學生日常生活有很大的連結，如果能夠引入最新科技來進行智慧植栽程式設計教材研發，將有助於學生看見程式設計的實際應用，產生更具體的目標與動力學好程式設計。我們在與交大資工林一平副校長團隊的會議中，看到他們利用IoTtalk系統建置的智慧農場，引起我們很大興趣。在進一步了解之後，交大團隊建議我們可以也引進用布種花草技術來改造現有的栽種方式，能夠利用毛細現象有效解決澆水所需的機械設計問題。我們希望引進交大發展的無人耕作系統，建置一個連結感測器、程式運算、數據分析、物聯網技術的智慧植栽花架，並結合攝影機製作花草生長記錄網頁，做為程式設計與日常生活結合的典範教學。
+這個網頁將會記錄南港高中發展智慧植栽程式設計的過程。
+<!--
+緣起於目前我們的學生學習程式設計課程還處於基本功培養的階段，看不到實際的應用，如何能夠讓學生了解如何透過程式來來真實地解決日常生活的問題，以達成12年國教所強調的素養導向教學。我們在執行臺北市小田園計畫的過程中，我們發現種花草與學生日常生活有很大的連結，如果能夠引入最新科技來進行智慧植栽程式設計教材研發，將有助於學生看見程式設計的實際應用，產生更具體的目標與動力學好程式設計。我們在與交大資工林一平副校長團隊的會議中，看到他們利用IoTtalk系統建置的智慧農場，引起我們很大興趣。在進一步了解之後，交大團隊建議我們可以也引進用布種花草技術來改造現有的栽種方式，能夠利用毛細現象有效解決澆水所需的機械設計問題。我們希望引進交大發展的無人耕作系統，建置一個連結感測器、程式運算、數據分析、物聯網技術的智慧植栽花架，並結合攝影機製作花草生長記錄網頁，做為程式設計與日常生活結合的典範教學。
+-->
 </h3>        
 {% for plant in plants %}
         {{plant.publication_date}} -- {{plant.memo}} <BR>
